# github-webhook-pull-request

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
deploy/: deployment.yaml  ingress.yaml  service.yaml
src/: Dockerfile  app.py
tests/: test_app.py
