[tool.poetry]
name = "webhook-github-pull-request"
version = "0.1.0"
description = ""
authors = ["wintersalmon <wintersalmon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
